--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "mocha": "^7.1.1",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "typemoq": "^2.1.0"
   }
 }
