--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
         {
             "type": "node",
             "request": "launch",
-            "name": "Mocha Tests",
+            "name": "Draw Test",
             "program": "${workspaceFolder}/node_modules/mocha/bin/mocha",
             "args": [
                 "--require", "ts-node/register",
                 "-u", "bdd",
                 "--timeout", "999999",
                 "--colors", "--recursive",
-                "${workspaceFolder}/test/**/*.spec.ts"
+                "${workspaceFolder}/test/**/DRW_VxVyNibble.spec.ts"
             ],
             "internalConsoleOptions": "openOnSessionStart"
         }
