--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,14 +8,14 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Draw Test",
+            "name": "Mocha Tests",
             "program": "${workspaceFolder}/node_modules/mocha/bin/mocha",
             "args": [
                 "--require", "ts-node/register",
                 "-u", "bdd",
                 "--timeout", "999999",
                 "--colors", "--recursive",
-                "${workspaceFolder}/test/**/DRW_VxVyNibble.spec.ts"
+                "${workspaceFolder}/test/**/*.spec.ts"
             ],
             "internalConsoleOptions": "openOnSessionStart"
         }
