--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
         {
             "type": "node",
             "request": "launch",
             "name": "Mocha Tests",
             "program": "${workspaceFolder}/node_modules/mocha/bin/mocha",
             "args": [
-                "--require", "ts-node/register",
-                "-u", "bdd",
-                "--timeout", "999999",
-                "--colors", "--recursive",
+                "--require",
+                "ts-node/register",
+                "-u",
+                "bdd",
+                "--timeout",
+                "999999",
+                "--colors",
+                "--recursive",
                 "${workspaceFolder}/test/**/*.spec.ts"
             ],
             "internalConsoleOptions": "openOnSessionStart"
