--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "chai": "^4.2.0",
+    "gulp-cli": "^2.2.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "mocha": "^7.1.1",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "typemoq": "^2.1.0"
+    "browserify": "^16.5.1",
+    "gulp": "^4.0.2",
+    "tsify": "^4.0.1",
+    "typemoq": "^2.1.0",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
