--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "devDependencies": {
     "browserify": "^16.5.1",
+    "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "tsify": "^4.0.1",
     "typemoq": "^2.1.0",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.1"
   }
 }
