--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
   "type": "module",
   "author": "lorenzosantini",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "browserify": "^16.5.1",
+    "fancy-log": "^1.3.3",
+    "gulp": "^4.0.2",
+    "tsify": "^4.0.1",
+    "typemoq": "^2.1.0",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.1",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "chai": "^4.2.0",
@@ -18,14 +26,5 @@
     "mocha": "^7.1.1",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
-  },
-  "devDependencies": {
-    "browserify": "^16.5.1",
-    "fancy-log": "^1.3.3",
-    "gulp": "^4.0.2",
-    "tsify": "^4.0.1",
-    "typemoq": "^2.1.0",
-    "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.1"
   }
 }
